--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
+
 <body>
-    <script src="data.js"></script>
+    <script src="script.js"></script>
+    <p>Первый - текущий элемент!</p>
+    <p>Второй - текущий элемент!</p>
+    <p>Третий - текущий элемент!</p>
+
 </body>
+
 </html>
